// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Return own slug and children but not grandchildren 1`] = `
Array [
  Object {
    "destination": "technical/",
    "isCurrent": true,
    "label": "Technical",
    "order": 1,
  },
  Object {
    "destination": "technical/sass-css/",
    "isCurrent": false,
    "label": "SASS & CSS",
    "order": 2,
  },
  Object {
    "destination": "technical/javascript",
    "isCurrent": false,
    "label": "JavaScript",
    "order": 3,
  },
  Object {
    "destination": "technical/installation",
    "isCurrent": false,
    "label": "Installation",
    "order": 4,
  },
]
`;

exports[`Return own slug and children if there are any 1`] = `
Array [
  Object {
    "destination": "technical/sass-css/",
    "isCurrent": true,
    "label": "SASS & CSS",
    "order": 2,
  },
  Object {
    "destination": "technical/sass-css/libraries",
    "isCurrent": false,
    "label": "Libraries",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/code-standards",
    "isCurrent": false,
    "label": "SASS code standards",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/sass-documentation",
    "isCurrent": false,
    "label": "SASS documentation",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/sass-installation",
    "isCurrent": false,
    "label": "SASS installation",
    "order": 999,
  },
]
`;

exports[`Return own slug and relevant siblings if there are no children (not at root level) 1`] = `
Array [
  Object {
    "destination": "technical/sass-css/",
    "isCurrent": false,
    "label": "SASS & CSS",
    "order": 2,
  },
  Object {
    "destination": "technical/sass-css/libraries",
    "isCurrent": false,
    "label": "Libraries",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/code-standards",
    "isCurrent": false,
    "label": "SASS code standards",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/sass-documentation",
    "isCurrent": false,
    "label": "SASS documentation",
    "order": 999,
  },
  Object {
    "destination": "technical/sass-css/sass-installation",
    "isCurrent": false,
    "label": "SASS installation",
    "order": 999,
  },
]
`;

exports[`Return own slug and relevant siblings if there are no children 1`] = `
Array [
  Object {
    "destination": "about/",
    "isCurrent": false,
    "label": "About",
    "order": 1,
  },
  Object {
    "destination": "about/getting-started",
    "isCurrent": false,
    "label": "Getting started",
    "order": 999,
  },
  Object {
    "destination": "about/roadmap",
    "isCurrent": false,
    "label": "Roadmap",
    "order": 999,
  },
]
`;
